(feat) Check if one string contains all the characters of another string in order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp"
     }
 }
